@@ -81,6 +81,9 @@ fi
 AC_SUBST(FFMPEG_CFLAGS)
 AC_SUBST(FFMPEG_LIBS)
 
+PKG_CHECK_MODULES(DTS,libdts )
+FFMPEG_LIBS="$FFMPEG_LIBS $DTS_LIBS"
+
 PKG_CHECK_MODULES(XIPH,ogg >= 1.1 vorbis vorbisenc theora )
 
 AC_SUBST(XIPH_CFLAGS)
