@@ -25,6 +25,53 @@
 #define V2V_PRESET_PRO 1
 #define V2V_PRESET_PREVIEW 2
 
+typedef struct ff2theora{
+	AVFormatContext *context;
+	int video_index;
+	int audio_index;
+	
+	int deinterlace;
+	int sample_rate;
+	int channels;
+	int disable_audio;
+	float audio_quality;
+	int audio_bitrate;
+	
+	int picture_width;
+	int picture_height;
+	double fps;
+	ImgReSampleContext *img_resample_ctx; /* for image resampling/resizing */
+	ReSampleContext *audio_resample_ctx;
+	ogg_uint32_t aspect_numerator;
+	ogg_uint32_t aspect_denominator;
+	double	frame_aspect;
+
+	int video_quality;
+	int video_bitrate;
+	int sharpness;
+	int keyint;
+
+	double force_input_fps;
+	
+	/* cropping */
+	int frame_topBand;
+	int frame_bottomBand;
+	int frame_leftBand;
+	int frame_rightBand;
+	
+	int frame_width;
+	int frame_height;
+	int frame_x_offset;
+	int frame_y_offset;
+
+	/* In seconds */
+	int start_time;
+	int end_time; 
+}
+*ff2theora;
+
+
+
 typedef struct
 {
 	int debug;
@@ -74,8 +121,7 @@ typedef struct
 theoraframes_info;
 
 extern void theoraframes_init (theoraframes_info *info);
-extern int theoraframes_add_video (theoraframes_info *info, uint8_t * data, int width, int height,
-				   int linesize,int e_o_s);
+extern int theoraframes_add_video (ff2theora this, theoraframes_info *info, AVFrame *avframe, int e_o_s);
 extern int theoraframes_add_audio (theoraframes_info *info, int16_t * readbuffer, int bytesread,
 				   int samplesread,int e_o_s);
 extern void theoraframes_flush (theoraframes_info *info, int e_o_s);
